Should have been updated when adding talks page

--- a/bio.html
+++ b/bio.html
@@ -12,7 +12,7 @@
 
 <p>She has been a software developer for nearly 20 years. Before working at the FT, she was a Technical Architect at the UK's <a href="https://gds.blog.gov.uk/about/">Government Digital Service</a> leading on Open Source, <a href="https://docs.cloud.service.gov.uk/">GOV.UK PaaS</a> and GOV.UK.</p>
 
-<p>She <a href="http://www.annashipman.co.uk/cv.html">speaks at conferences</a>, <a href="http://www.annashipman.co.uk/jfdi.html">blogs on her personal website</a>, <a href="https://twitter.com/annashipman/">tweets</a> and is always up for a game of pool.</p>
+<p>She <a href="http://www.annashipman.co.uk/speaking.html">speaks at conferences</a>, <a href="http://www.annashipman.co.uk/jfdi.html">blogs on her personal website</a>, <a href="https://twitter.com/annashipman/">tweets</a> and is always up for a game of pool.</p>
 </div>
 </div>
 
