Update bio page

--- a/bio.html
+++ b/bio.html
@@ -8,11 +8,11 @@
 <div class="right-column">
 <div>
 <h2>Speaker bio</h2>
-<p>Anna Shipman is Technical Director for Customer Products at the <a href="https://www.ft.com/">Financial Times</a>, leading on B2C products including the award-winning <a href="https://www.ft.com">FT.com</a> website and the FT iPhone and Android apps.</p>
+<p>Anna Shipman is Chief Technology Officer at <a href="https://www.koothplc.com/">Kooth</a>, a company specialising in digital mental health.</p>
 
-<p>She has been a software developer for nearly 20 years. Before working at the FT, she was a Technical Architect at the UK's <a href="https://gds.blog.gov.uk/about/">Government Digital Service</a> leading on Open Source, <a href="https://docs.cloud.service.gov.uk/">GOV.UK PaaS</a> and GOV.UK.</p>
+<p>She has been a software engineer for 20 years. Before working at Kooth, she was Technical Director for Customer Products at the <a href="https://www.ft.com/">Financial Times</a>, leading on the FT.com website and the apps. Peviously she was a Technical Architect at the UK's <a href="https://gds.blog.gov.uk/about/">Government Digital Service</a>, launching the <a href="https://www.gov.uk/">GOV.UK website</a>.</p>
 
-<p>She <a href="http://www.annashipman.co.uk/speaking.html">speaks at conferences</a>, <a href="http://www.annashipman.co.uk/jfdi.html">blogs on her personal website</a>, <a href="https://twitter.com/annashipman/">tweets</a> and is always up for a game of pool.</p>
+<p>She <a href="http://www.annashipman.co.uk/speaking.html">speaks at conferences</a>, <a href="http://www.annashipman.co.uk/jfdi.html">blogs on her personal website</a>, very occasionally <a href="https://twitter.com/annashipman/">tweets</a> and is always up for a game of pool.</p>
 </div>
 </div>
 
