--- a/bio.html
+++ b/bio.html
@@ -8,10 +8,9 @@
 <div class="right-column">
 <div>
 <h2>Speaker bio</h2>
-<p>Anna Shipman is Chief Technology Officer at <a href="https://www.koothplc.com/">Kooth</a>, a company specialising in digital mental health.</p>
+<p>Anna Shipman is Chief Technology Officer at <a href="https://www.koothplc.com/">Kooth</a>, pioneering great digital mental healthcare for everyone.</p>
 
-<p>She has been a software engineer for 20 years. Before working at Kooth, she was Technical Director for Customer Products at the <a href="https://www.ft.com/">Financial Times</a>, leading on the FT.com website and the apps. Peviously she was a Technical Architect at the UK's <a href="https://gds.blog.gov.uk/about/">Government Digital Service</a>, launching the <a href="https://www.gov.uk/">GOV.UK website</a>.</p>
-
+<p>With over two decades of software engineering experience, Anna has led teams both large and small. Before joining Kooth, she served as the Technical Director for Customer Products at the Financial Times, overseeing the award-winning <a href="https://ft.com">FT.com website</a> and FT iPhone and Android apps. She also played a crucial role in launching the <a href="https://www.gov.uk/">GOV.UK</a> website during her time at the Government Digital Service.</p>
 <p>She <a href="http://www.annashipman.co.uk/speaking.html">speaks at conferences</a>, <a href="http://www.annashipman.co.uk/jfdi.html">blogs on her personal website</a>, very occasionally <a href="https://twitter.com/annashipman/">tweets</a> and is always up for a game of pool.</p>
 </div>
 </div>
